# FAUCovid19

./: .env  .flake8  .gitignore  .pre-commit-config(will_remove_parenthesis_later).yaml  .pre-commit-config.yaml  .pre-commit-hook.yaml  .travis.yml  Dockerfile  MANIFEST.in  README.md  click_command.py  credentials.py  docker-compose.yml  downloaded.p  downloaded_tmp2.json  global_parameters.py  pyproject.toml  pytest.ini  requirements.txt  requirements_2.txt  setup.cfg  setup.py  test_db  tox.ini
Data/Processed/: .coverage  reddit_database.db-journal
Data/Raw/: emoji.py
Docs/source/: app.rst  conf.py  get_started.rst  index.rst  installation.rst  reddit_crawler.rst  social_media_crawler.rst  twitter_crawler.rst  update_sqlite3_database.rst
Examples/: scratch.py  test_db  test_db1
Examples/Basic/: add_argument_to_run_in_vscode.py  basic_inheritance.py  exception_examples.py  flask_api_example.py  getattr_func.py  sentiment_analysis.py
Examples/Basic/FlaskAPIWithSQLite/: app.py
Examples/Basic/Logger/: auxiliary_module.py  logger.py
Examples/Basic/RESTapi/: Dockerfile  README.md  database.pickle  devices.db.bak  devices.db.dir  docker-compose.yml  requirements.txt  run.py  shelve_example.py
Examples/Data/: blueprint_demo.py  create_api_for_twitter_reddit.py  explore_reddit_twitter_data.py  flask_api_with_twitter_reddit_data.py
Examples/Demo/AddSentimentKeyToData/: add_sentiment_key_to_data.py
Examples/Demo/RunningRedditCrawler/: running_reddit_crawler.py  running_reddit_crawler_with_one_query.py
Examples/Libraries/ClickLibrary/: adding_parameters.py  callback_invocation.py  click_demo.py  nested_handling_and_context.py  nesting_commands.py  test.py
Examples/Libraries/Flask/: flask_argument_example.py  flask_document_example.py  flask_request_documentation_example.py  test_flask.py  ิflask_blueprint_example.py
Examples/Libraries/FlaskRestfulAPI/: document_example_minmal_api.py  explore_app_context.py
Examples/Libraries/GetOldTweetsLibrary/: setQuerySearch_example.py  testing_function__to_fix_too_many_request_error.py
Examples/Libraries/GraphVizLibrary/: graphviz_example.py  hello.gv  readme.md
Examples/Libraries/PRAWLibrary/: praw_example_from_github.py
Examples/Libraries/PSAWLibrary/: psaw_example_from_github.py  test_psaw_example_from_github.py
Examples/Libraries/ShelveLibrary/: document_example.py  example1.py
Examples/Libraries/SqliteLibrary/: documentation_example.py
Examples/Libraries/TensorflowLibrary/: hello_world_tensorflow.py
Examples/Libraries/TextBlob_library/: sentiment_analysis.py
Examples/Libraries/Tweepy_library/: stream_api.py
Examples/Libraries/Twitter_API/: covid_19_stream.py
Examples/Root/: .flake8  .gitignore
Examples/VSCodeExtension/: vscode_git
Notebooks/Documents/: data_structure_documetation.ipynb
Outputs/LP_performance/: lr_middle.pickle  lr_middle_strategy_.pickle  lr_top.pickle  lr_top_strategy_.pickle  mlp_middle.pickle  mlp_middle_strategy_.pickle  mlp_top.pickle  mlp_top_strategy_.pickle  rf_middle.pickle  rf_middle_strategy_.pickle  rf_top.pickle  rf_top_strategy_.pickle  svm_middle.pickle  svm_middle_strategy_.pickle  svm_top.pickle  svm_top_strategy_.pickle
Reports/: show_distribution_of_aspects_crawled_from_reddit.py
Test_dir/: test_conditions.py
Tests/: check_conditions.py  test_import.py  testing_travis_ci.py
Tests/TestSocialMediaCrawler/: conftest.py  test_social_media_crawler.py
Tests/Utilities/: test_check_conditions.py  test_email_utility.py  test_logging.py
Utilities/: declared_typing.py  ensure_type.py  saver.py
src/: __init__.py
src/Utilities/: __init__.py  control_limit.py  declared_typing.py  ensure_type.py  saver.py  time_utility.py  utilities.py
tests/: check_conditions.py  test_import.py
work_env/: pyvenv.cfg
work_env/Scripts/: Activate.ps1  GetOldTweets3  activate  activate.bat  autopep8-script.py  mypyc  nltk-script.py
(+1182 files in other folders)
