#=====================
#== The top of the setup.cfg include general info about the project
#=====================
[metadata]
# The name of the package (should be same as what's in `Sources/{your project name}`)
name = FAUSocialMediaCrawler
# The version of the package (you should start with 0.0.1-dev for new projects)
version = 0.0.2
# A one line descriptiojkkn of your package, should be the same as the module-level docstring
# in Sources/{your project}/__init__.py
description = crawled data from social media sources such as twitter and reddit
# The `file:` magical prefix tells it to load what's in your README.rst. You did write a nice readme, right?
long_description = file: README.rst
#=====================
#== this section describe the places where project resources live on the internet
#=====================
# Where is the project
url = https://github.com/Awannaphasch2016/FAUCovid19.git
# Where can people get your code
download_url = not yet release
# You can put whatever key-values here you want, but these three are special
project_urls =
    Bug Tracker = https://github.com/Awannaphasch2016/FAUCovid19/issues
    Source Code = https://github.com/Awannaphasch2016/FAUCovid19
    Documentation = not yet created (have to be readthedocs)
#=====================
#== this section is author and licensing information
#=====================
# Author information
author = Anak Wannaphaschaiyong
author_email = awannaphasch2016@fau.edu
# Who is actually taking care of the code? Might not be the same as the author
maintainer = Ana Wannaphaschaiyong
maintainer_email = awannaphasch2016@fau.edu

# What kind of license are you using? Somehow, this isn't the same as the trove classifiers
license = MIT
# The thing you put here is the name of the file in the same directory as the setup.cfg
license_file = LICENSE
#=====================
#== This section is project Classifier. label by "trove classifer"
#=====================

# [metadata]
# Search tags
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Information Analysis
#=====================
#== Thsi section is keyword which can be any word that you find relevant
#=====================
keywords =
    Social Network
    NPL
    Reddit
    TWitter
    Crawler
    Information Analysis
#=====================
#== This section is [option] section. we need to tell it what the requirements for the packages are
#==============e======
[options]
install_requires =
    flask
    flask_restapi
    nltk
    textblob
    Click
    click-plugins
    more_itertools
    requests
    requests_file
    tqdm

# You're always supposed to set zip_safe = false
zip_safe = false

# If you have some non-python files inside your `Sources/{your package/` directory you
# want to come for the ride when other people use your code, do this
include_package_data = True

;# Always tell people what python you support! Is redundant of classifiers, but that's how it is.
;python_requires = '3.7'

# Where is my code?
package_dir =
    = src
packages = find:

;# add commandline entry_point

[options.packages.find]
where =
    src

;exclude =
;    Data
;    Examples
;    *.Examples
;    *.Examples.*


[option.entry_points]
console_scripts =
    social-media_crawler = src.Sources.Preparations.Data.social_media_crawler:main

scripts =
    global_parameters.py
